--- a/index.html
+++ b/index.html
@@ -399,7 +399,7 @@
                 </div>
                 <div class="p-6 pt-0 flex space-x-4">
                     <!-- EDITABLE: Update href to your GitHub repo -->
-                    <a href="https://github.com/MMNayon00" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
+                    <a href="https://github.com/MMNayon00/VPN-Network-Implementation-Project" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
                 </div>
             </div>
             
@@ -426,7 +426,7 @@
                 </div>
                 <div class="p-6 pt-0 flex space-x-4">
                     <!-- EDITABLE: Update href to your GitHub repo -->
-                    <a href="https://github.com/MMNayon00" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
+                    <a href="https://github.com/MMNayon00/MikroTik-Router-Configuration-for-a-Small-Network/tree/main" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
                 </div>
             </div>
 
@@ -452,7 +452,7 @@
                 </div>
                 <div class="p-6 pt-0 flex space-x-4">
                     <!-- EDITABLE: Update href to your GitHub repo -->
-                    <a href="https://github.com/MMNayon00" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
+                    <a href="https://github.com/MMNayon00/Gallblader-Cancer-Detection-DL" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
                 </div>
             </div>
 
@@ -477,7 +477,7 @@
                 </div>
                 <div class="p-6 pt-0 flex space-x-4">
                     <!-- EDITABLE: Update href to your GitHub repo -->
-                    <a href="https://github.com/MMNayon00" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
+                    <a href="https://github.com/MMNayon00/Library-MS-Project" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
                 </div>
             </div>
 
@@ -502,7 +502,7 @@
                 </div>
                 <div class="p-6 pt-0 flex space-x-4">
                     <!-- EDITABLE: Update href to your GitHub repo -->
-                    <a href="https://github.com/MMNayon00" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
+                    <a href="https://github.com/MMNayon00/DoorLock-Arduino-Project" target="_blank" class="btn-primary text-sm flex-1 text-center">$ git clone ...</a>
                 </div>
             </div>
 
@@ -857,6 +857,7 @@
 
 </body>
 </html>
+
 
 
 
